Requires
~~~~~~~~
- CPSDefault > 3.56.5
New features
~~~~~~~~~~~~
-
Bug fixes
~~~~~~~~~
- #1805: Add DateTime type to the method match ofCPSDirectory.utils
- Fixed XHTML validity in directory entry form.
- Synced with CPSDocument and CPSDefault fix for #1806 "Fields with errors have
  their error message not associated them and too far below".
New internal features
~~~~~~~~~~~~~~~~~~~~~
- 