@@ -10,8 +10,9 @@ May return a rendered document, or do a redirect.
 
 from urllib import urlencode
 
-dirname = context.getId()
-id_field = context.id_field
+directory = context
+dirname = directory.getId()
+id_field = directory.id_field
 id = datastructure.getDataModel()[id_field]
 
 portal_url = context.portal_url()
@@ -19,5 +20,8 @@ args = urlencode({'dirname': dirname,
                   'id': id,
                   'portal_status_message': 'psm_entry_created',
                   })
-action_path = 'cpsdirectory_entry_edit_form?'+args
-context.REQUEST.RESPONSE.redirect('%s/%s' % (portal_url, action_path))
+if directory.isEditEntryAllowed(id=id):
+    action_path = 'cpsdirectory_entry_edit_form'
+else:
+    action_path = 'cpsdirectory_entry_view'
+context.REQUEST.RESPONSE.redirect('%s/%s?%s' % (portal_url, action_path, args))
